Add blog page home-page 2022
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -52,6 +52,7 @@
   <meta property="og:type" content="article">
   <!-- font-awesome css  -->
   <link rel="stylesheet" href="/assets/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <!-- AOS css  -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!-- bulma css  -->
@@ -117,7 +118,7 @@
                       Sign up
                     </a>
                     <a href="{{.Site.Params.domain_bytebuilders}}/user/login"
-                      class="button ac-button is-secondary ml-15">
+                      class="button ac-button is-secondary ml-0">
                       Sign in
                     </a>
                   </div>
