--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,6 +4,216 @@
 {{- if .IsHome -}}{{ $pctx = .Site }}{{- end -}}
 {{- $pages := $pctx.RegularPages -}}
 
+<!--============================== hero area 2022 start  ==============================-->
+<section class="hero-area-blog mt-100">
+  <div class="container">
+    <div class="columns is-vcentered">
+      <div class="column is-7">
+        <figure class="blog-banner image is-16by9">
+          <a href="#"><img
+              src="https://blog.byte.builders/post/stash-webinar-2022-07-06/hero_hudfd7443e5b7fdd9c44f163608ea40ad4_67089_1300x650_fill_q75_box_smart1.jpg"
+              alt="appscode-blog"></a>
+        </figure>
+      </div>
+      <div class="column is-5">
+        <div class="blog-title-content">
+          <!-- title  -->
+          <h1><a href="#">Using GKE Workload Identity with Stasy</a></h1>
+          <!-- title  -->
+
+          <!-- meta description  -->
+          <div class="meta">
+            <div class="author">By <a href="#">Hossain Mahmud</a></div>
+            <div class="date"><i class="fa fa-calendar-check-o" aria-hidden="true"></i> <strong>30-Jun-2022</strong>
+            </div>
+          </div>
+          <!-- meta description  -->
+
+          <!-- summary  -->
+          <p>Summary On June 29, 2022, Appscode held a webinar on Using GKE Workload Identity with Stash. Key contents
+            of the webinars ...</p>
+
+          <a class="inline-button" href="#">READ MORE <i class="fa fa-arrow-right ml-10"></i></a>
+          <!-- summary  -->
+
+          <!-- share with  -->
+          <div class="social-share">
+            <label>Share with:</label>
+            <ul class="social-share-button">
+              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fa fa-envelope-o"></i></a></li>
+            </ul>
+          </div>
+          <!-- share with  -->
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!--============================== hero area 2022 end ==============================-->
+
+
+<!--============================== search and filter area start  ==============================-->
+<div class="search-filter-area">
+  <div class="container">
+    <div class="columns">
+      <div class="column">
+        <div class="filter-wrapper">
+          <div class="search-area">
+            <i class="fa fa-search"></i>
+            <input type="search" name="search" placeholder="Search 'KubeDB', 'Stash', 'AWS'">
+          </div>
+
+
+          <div class="filter-area">
+            <!-- sort by  -->
+            <select name="sortby" id="">
+              <option value="sortby">sortby</option>
+              <option value="date">Date</option>
+              <option value="name">Name</option>
+            </select>
+            <!-- sort by  -->
+
+            <!-- viewing type  -->
+            <div class="viewing-mode">
+              <label>VIEW</label>
+              <button class="is-active"><span class="material-symbols-outlined">grid_view</span></button>
+              <button><span class="material-symbols-outlined">list</span></button>
+            </div>
+            <!-- viewing type  -->
+          </div>
+        </div>
+     </div>
+    </div>
+  </div>
+</div>
+<!--============================== search and filter area end  ==============================-->
+
+<section class="blog-items-area">
+  <div class="container">
+    <div class="columns">
+      <div class="column is-3">
+        <!-- left sidebar start  -->
+        <div class="left-sidebar">
+          <!-- collapsable menu start  -->
+          <div class="collapsable-menu">
+            <button>PRODUCTS <i class="fa fa-angle-up"></i></button>
+            <!-- single ac-checkbox start  -->
+            <div class="ac-single-checkbox">
+              <input class="is-checkradio ac-checkbox" id="kubedb" type="checkbox" name="checkbox" />
+              <label for="kubedb">KubeDB</label>
+            </div>
+            <!-- single ac-checkbox end -->
+
+            <!-- single ac-checkbox start  -->
+            <div class="ac-single-checkbox">
+              <input class="is-checkradio ac-checkbox" id="stash" type="checkbox" name="checkbox" />
+              <label for="stash">Stash</label>
+            </div>
+            <!-- single ac-checkbox end -->
+
+            <!-- single ac-checkbox start  -->
+            <div class="ac-single-checkbox">
+              <input class="is-checkradio ac-checkbox" id="kubevault" type="checkbox" name="checkbox" />
+              <label for="kubevault">KubeVault</label>
+            </div>
+            <!-- single ac-checkbox end -->
+
+            <!-- single ac-checkbox start  -->
+            <div class="ac-single-checkbox">
+              <input class="is-checkradio ac-checkbox" id="kubeform" type="checkbox" name="checkbox" />
+              <label for="kubeform">Kubeform</label>
+            </div>
+            <!-- single ac-checkbox end -->
+          </div>
+          <!-- collapsable menu end -->
+
+          <!-- collapsable menu start  -->
+          <div class="collapsable-menu">
+            <button>PRODUCTS <i class="fa fa-angle-up"></i></button>
+            <!-- single ac-checkbox start  -->
+            <div class="ac-single-checkbox">
+              <input class="is-checkradio ac-checkbox" id="kubedb" type="checkbox" name="checkbox" />
+              <label for="kubedb">KubeDB</label>
+            </div>
+            <!-- single ac-checkbox end -->
+
+            <!-- single ac-checkbox start  -->
+            <div class="ac-single-checkbox">
+              <input class="is-checkradio ac-checkbox" id="stash" type="checkbox" name="checkbox" />
+              <label for="stash">Stash</label>
+            </div>
+            <!-- single ac-checkbox end -->
+
+            <!-- single ac-checkbox start  -->
+            <div class="ac-single-checkbox">
+              <input class="is-checkradio ac-checkbox" id="kubevault" type="checkbox" name="checkbox" />
+              <label for="kubevault">KubeVault</label>
+            </div>
+            <!-- single ac-checkbox end -->
+
+            <!-- single ac-checkbox start  -->
+            <div class="ac-single-checkbox">
+              <input class="is-checkradio ac-checkbox" id="kubeform" type="checkbox" name="checkbox" />
+              <label for="kubeform">Kubeform</label>
+            </div>
+            <!-- single ac-checkbox end -->
+          </div>
+          <!-- collapsable menu end -->
+        </div>
+        <!-- left sidebar end -->
+      </div>
+      <div class="column is-9">
+         <div class="blog-items">
+          <div class="columns">
+            <div class="column is-4">
+               <div class="single-blog">
+                 <figure class="image is-16by9">
+                   <a href="#"><img src="https://via.placeholder.com/600/dddddd/808080" alt=""></a>
+                 </figure>
+                 <!-- meta description  -->
+                 <div class="meta">
+                   <div class="author"><i class="fa fa-user"></i> <a href="#">Hossain Mahmud</a></div>
+                   <div class="date"><i class="fa fa-calendar-check-o" aria-hidden="true"></i>
+                     <strong>30-Jun-2022</strong>
+                   </div>
+                 </div>
+                 <!-- meta description  -->
+
+                 <h2><a href="#">Using GKE Workload Identity with Stash</a></h2>
+                 <p>Summary On June 29, 2022, Appscode held a webinar on Using GKE Workload ...</p>
+                 <a href="#" class="inline-button">READ MORE <i class="fa fa-angle-right"></i></a>
+               </div>
+            </div>
+
+             <div class="column is-4">
+               <div class="single-blog">
+                 <figure class="image is-16by9">
+                   <a href="#"><img src="https://via.placeholder.com/600/dddddd/808080" alt=""></a>
+                 </figure>
+                 <!-- meta description  -->
+                 <div class="meta">
+                   <div class="author"><i class="fa fa-user"></i> <a href="#">Hossain Mahmud</a></div>
+                   <div class="date"><i class="fa fa-calendar-check-o" aria-hidden="true"></i>
+                     <strong>30-Jun-2022</strong>
+                   </div>
+                 </div>
+                 <!-- meta description  -->
+
+                 <h2><a href="#">Using GKE Workload Identity with Stash</a></h2>
+                 <p>Summary On June 29, 2022, Appscode held a webinar on Using GKE Workload ...</p>
+                 <a href="#" class="inline-button">READ MORE <i class="fa fa-angle-right"></i></a>
+               </div>
+             </div>
+          </div>
+         </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- blog hero area start  -->
 <section class="blog-hero-area section-padding hero is-medium has-carousel">
   <div class="container section">
@@ -28,19 +238,23 @@
             <div class="social-link-vertical">
               <ul>
                 <li>
-                  <a href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}" target="_blank" rel="noopener" class="twitter"
-                    aria-label="share on Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                  <a href="http://twitter.com/share?url={{ .Permalink }}&text={{ .Title }}" target="_blank"
+                    rel="noopener" class="twitter" aria-label="share on Twitter"><i class="fa fa-twitter"
+                      aria-hidden="true"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ .Permalink }}&title={{ .Title }}&summary={{ .Summary }}" target="_blank" rel="noopener"
-                    class="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                  <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ .Permalink }}&title={{ .Title }}&summary={{ .Summary }}"
+                    target="_blank" rel="noopener" class="linkedin"><i class="fa fa-linkedin"
+                      aria-hidden="true"></i></a>
                 </li>
                 <li>
-                  <a href="http://www.facebook.com/sharer.php?u={{ .Permalink }}" target="_blank" rel="noopener" class="facebook"
-                    aria-label="share on Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                  <a href="http://www.facebook.com/sharer.php?u={{ .Permalink }}" target="_blank" rel="noopener"
+                    class="facebook" aria-label="share on Facebook"><i class="fa fa-facebook"
+                      aria-hidden="true"></i></a>
                 </li>
                 <li>
-                  <a href="mailto:?subject={{ .Title | htmlEscape }}&body={{ .Permalink | htmlEscape }}"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                  <a href="mailto:?subject={{ .Title | htmlEscape }}&body={{ .Permalink | htmlEscape }}"><i
+                      class="fa fa-envelope-o" aria-hidden="true"></i></a>
                 </li>
               </ul>
             </div>
@@ -56,15 +270,17 @@
                     {{ $p.Date.Format "2-Jan-2006" }}</p>
                   <h1 data-aos="fade-up" data-aos-duration="600"><a href="{{ $p.RelPermalink }}">{{ $p.Title }}</a></h1>
                   <p data-aos="fade-up" data-aos-duration="700" class="author"><span>by </span>
-                  {{ range $author := first 1 $p.Params.authors }}
+                    {{ range $author := first 1 $p.Params.authors }}
                     <a href="/authors/{{ $author | urlize }}" target="_blank" rel="noopener">{{ $author }}</a>
-                  {{ end }}
-                  {{ range $author := after 1 $p.Params.authors }}
-                    <span>&amp;</span><a href="/authors/{{ $author | urlize }}" target="_blank" rel="noopener">{{ $author }}</a>
-                  {{ end }}
+                    {{ end }}
+                    {{ range $author := after 1 $p.Params.authors }}
+                    <span>&amp;</span><a href="/authors/{{ $author | urlize }}" target="_blank"
+                      rel="noopener">{{ $author }}</a>
+                    {{ end }}
                   </p>
                   <p data-aos="fade-up" data-aos-duration="800" class="description">{{ $p.Summary }}</p>
-                  <a data-aos="fade-up" data-aos-duration="1000" href="{{ $p.RelPermalink }}" class="inline-button">Read More</a>
+                  <a data-aos="fade-up" data-aos-duration="1000" href="{{ $p.RelPermalink }}" class="inline-button">Read
+                    More</a>
                 </div>
               </div>
               <!-- left content end -->
@@ -93,7 +309,7 @@
     <div class="columns">
       <!-- left sidebar start  -->
       <div class="column is-3">
-        <div class="blog-left-sidebar" >
+        <div class="blog-left-sidebar">
 
           <!-- search-bar start  -->
           <!-- <div class="search-bar">
@@ -132,7 +348,8 @@
               <div class="blog-image-wrapper">
                 {{ $original := $p.Resources.GetMatch "hero.jpg" }}
                 {{ $cropped := $original.Fill "328x234" }}
-                <a href="{{ $p.RelPermalink }}" class="blog-image blog-1" style="background-image: url({{ $cropped.RelPermalink }});"></a>
+                <a href="{{ $p.RelPermalink }}" class="blog-image blog-1"
+                  style="background-image: url({{ $cropped.RelPermalink }});"></a>
 
               </div>
               <div class="single-blog-content">
