Add single blog style
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -173,18 +173,20 @@
                  <figure class="image is-16by9">
                    <a href="#"><img src="https://via.placeholder.com/600/dddddd/808080" alt=""></a>
                  </figure>
-                 <!-- meta description  -->
-                 <div class="meta">
-                   <div class="author"><i class="fa fa-user"></i> <a href="#">Hossain Mahmud</a></div>
-                   <div class="date"><i class="fa fa-calendar-check-o" aria-hidden="true"></i>
-                     <strong>30-Jun-2022</strong>
+                <div class="p-15">
+                   <!-- meta description  -->
+                   <div class="meta">
+                     <div class="author"><i class="fa fa-user"></i> <a href="#">Hossain Mahmud</a></div>
+                     <div class="date"><i class="fa fa-calendar-check-o" aria-hidden="true"></i>
+                       <strong>30-Jun-2022</strong>
+                     </div>
                    </div>
-                 </div>
-                 <!-- meta description  -->
+                   <!-- meta description  -->
 
-                 <h2><a href="#">Using GKE Workload Identity with Stash</a></h2>
-                 <p>Summary On June 29, 2022, Appscode held a webinar on Using GKE Workload ...</p>
-                 <a href="#" class="inline-button">READ MORE <i class="fa fa-angle-right"></i></a>
+                   <h2><a href="#">Using GKE Workload Identity with Stash</a></h2>
+                   <p>Summary On June 29, 2022, Appscode held a webinar on Using GKE Workload ...</p>
+                   <a href="#" class="inline-button">READ MORE <i class="fa fa-angle-right"></i></a>
+                </div>
                </div>
             </div>
 
@@ -193,18 +195,20 @@
                  <figure class="image is-16by9">
                    <a href="#"><img src="https://via.placeholder.com/600/dddddd/808080" alt=""></a>
                  </figure>
-                 <!-- meta description  -->
-                 <div class="meta">
-                   <div class="author"><i class="fa fa-user"></i> <a href="#">Hossain Mahmud</a></div>
-                   <div class="date"><i class="fa fa-calendar-check-o" aria-hidden="true"></i>
-                     <strong>30-Jun-2022</strong>
+                <div class="p-15">
+                   <!-- meta description  -->
+                   <div class="meta">
+                     <div class="author"><i class="fa fa-user"></i> <a href="#">Hossain Mahmud</a></div>
+                     <div class="date"><i class="fa fa-calendar-check-o" aria-hidden="true"></i>
+                       <strong>30-Jun-2022</strong>
+                     </div>
                    </div>
-                 </div>
-                 <!-- meta description  -->
+                   <!-- meta description  -->
 
-                 <h2><a href="#">Using GKE Workload Identity with Stash</a></h2>
-                 <p>Summary On June 29, 2022, Appscode held a webinar on Using GKE Workload ...</p>
-                 <a href="#" class="inline-button">READ MORE <i class="fa fa-angle-right"></i></a>
+                   <h2><a href="#">Using GKE Workload Identity with Stash</a></h2>
+                   <p>Summary On June 29, 2022, Appscode held a webinar on Using GKE Workload ...</p>
+                   <a href="#" class="inline-button">READ MORE <i class="fa fa-angle-right"></i></a>
+                </div>
                </div>
              </div>
           </div>
